--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -58,7 +58,7 @@
  nevledi_land_management: "Land Management"
  nevledi_land_management_desc: "Quick urbanization and quickly decreasing amount of undeveloped made our population much more efficient and careful in deciding where farms and industries should go."
  nevledi_down_the_magreina: "Down the Magreina"
- nevledi_down_the_magreina_desc: "The city of Wulki Szanec is a small at the first glance, but it has a one important feature - it lies centrally on the Magreina River. Our rulers often taxed passing merchants high tolls at the expense of popularity among the people of Nifthem."
+ nevledi_down_the_magreina_desc: "The city of Wulki Szanec is a small at the first glance, but it has a one important feature - it lies centrally on the Magreina River. Our rulers often taxed passing merchants high tolls at the expense of popularity among the people of Niftland."
 
  group_bogilish_ideas: "Bogilish Minor Ideas"
  group_bogilish_ideas_bonus: "Bogilish Minor Ambition"
