--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -79,21 +79,21 @@
 
  ehren_saelianism_incident_recent_tooltip: "Recent incident was 25 years ago"
 
- ## Nifthem
+ ## Niftland
  
- incident_nifthem_conquest_title: "Question of Nifthem"
- incident_nifthem_conquest_desc: "For a long time lack of official stance towards convertion in Nifthemi lands created a lot of problems. But with us becoming even more and more present in this region we should finally decide what should be done."
- ehren_saelianism_nifthem_provinces: "Have 3 provinces in Nifthem"
+ incident_nifthem_conquest_title: "Question of Niftland"
+ incident_nifthem_conquest_desc: "For a long time lack of official stance towards convertion in Niftlandian lands created a lot of problems. But with us becoming even more and more present in this region we should finally decide what should be done."
+ ehren_saelianism_nifthem_provinces: "Have 3 provinces in Niftland"
 
  # Events
 
- td_ehren_saelianism.1.t: "Official Stance in Nifthem"
- td_ehren_saelianism.1.desc: "We recieved a lot of lists from different clergy representatives with one important question. Conversion of Nifthem is now one of the most important topics in this moment and everybody wants to know our stance about this topic. Should we treat them as equals and respect their faith or enforce our own beliefs?"
+ td_ehren_saelianism.1.t: "Official Stance in Niftland"
+ td_ehren_saelianism.1.desc: "We recieved a lot of lists from different clergy representatives with one important question. Conversion of Niftland is now one of the most important topics in this moment and everybody wants to know our stance about this topic. Should we treat them as equals and respect their faith or enforce our own beliefs?"
  td_ehren_saelianism.1.a: "Treat them with respect"
  td_ehren_saelianism.1.b: "They must be enlightened!"
 
  td_ehren_saelianism.2.t: "Rampant Missionaries"
- td_ehren_saelianism.2.desc: "We lost control over missionaries in Nifthem, their behavior is starting to be even more antagonistic towards local population making situation pretty serious and problematic. A lot of complaints got delivered to us forcing us to take a official stance towards it. We can reprimand these missionaries but we predict that it will slow down convertion attempts in our entire country for some time, we also can support moderates and their calmer methods of convertion but still won't satisfy local population. But Ehrenists are trying to convince us to support these missionaries and allow them to continue their work"
+ td_ehren_saelianism.2.desc: "We lost control over missionaries in Niftland, their behavior is starting to be even more antagonistic towards local population making situation pretty serious and problematic. A lot of complaints got delivered to us forcing us to take a official stance towards it. We can reprimand these missionaries but we predict that it will slow down convertion attempts in our entire country for some time, we also can support moderates and their calmer methods of convertion but still won't satisfy local population. But Ehrenists are trying to convince us to support these missionaries and allow them to continue their work"
  td_ehren_saelianism.2.a: "Reprimand them"
  td_ehren_saelianism.2.b: "Support moderates"
  td_ehren_saelianism.2.c: "Allow it to continue"
@@ -103,37 +103,37 @@
  ehren_saelianism_nifthem_missionaries_encouraged: "Missionaries Encouraged"
  desc_ehren_saelianism_nifthem_missionaries_encouraged: "Missionaries were allowed to use their radical methods of convertion."
 
- td_ehren_saelianism.3.t: "Discrimination Areas in Nifthem"
- td_ehren_saelianism.3.desc: "Ehren Saelian followers in Nifthem started to create new communities isolated from Sigilianism and their teachings. It causes a lot of unrest in these lands but also encouraged more people to convert. Should we allow them to continue or forcibly abolish them?"
+ td_ehren_saelianism.3.t: "Discrimination Areas in Niftland"
+ td_ehren_saelianism.3.desc: "Ehren Saelian followers in Niftland started to create new communities isolated from Sigilianism and their teachings. It causes a lot of unrest in these lands but also encouraged more people to convert. Should we allow them to continue or forcibly abolish them?"
  td_ehren_saelianism.3.a: "Abolish them!"
  td_ehren_saelianism.3.b: "Allow them to continue"
 
- ehren_saelianism_events_nifthem_discrimination_tt: "There is a 25% chance for every Nifthemian, Sigilian province to receive a modifier that gives local unrest and boosts local missionary strength"
+ ehren_saelianism_events_nifthem_discrimination_tt: "There is a 25% chance for every Niftlandian, Sigilian province to receive a modifier that gives local unrest and boosts local missionary strength"
  ehren_saelianism_nifthem_sigilian_discrimination: "Discrimination Zone"
  desc_ehren_saelianism_nifthem_sigilian_discrimination: "Local Ehren Saelian followers decided to isolate themselves from Sigilian communities."
 
  td_ehren_saelianism.4.t: "Religious Rebellions"
- td_ehren_saelianism.4.desc: "Radical elements in Nifthem started to rebel against our rule! Ehrenists are accusing us of not doing enough to help their convertion methods and local Sigilians are accusing us of not doing enough to stop violence against them. We can crush one of the sides and appease to another side, but we can also crush elements from both sides and force them to calm down."
+ td_ehren_saelianism.4.desc: "Radical elements in Niftland started to rebel against our rule! Ehrenists are accusing us of not doing enough to help their convertion methods and local Sigilians are accusing us of not doing enough to stop violence against them. We can crush one of the sides and appease to another side, but we can also crush elements from both sides and force them to calm down."
  td_ehren_saelianism.4.a: "Crush Ehrenists"
  td_ehren_saelianism.4.b: "Crush both of them"
  td_ehren_saelianism.4.c: "Crush Sigilians"
 
- td_ehren_saelianism.5.t: "Sigilianists Successful in Nifthem"
+ td_ehren_saelianism.5.t: "Sigilianists Successful in Niftland"
  td_ehren_saelianism.5.desc: "Our actions in this incident made Sigilianists more powerful in our country. Because of that our main doctrine has become more Sigilian and we are moving slowly to reintegration into Sigilianism."
  td_ehren_saelianism.5.a: "Good"
- ehren_saelianism_nifthem_end_sigilianists: "Sigilianists Victorious in Nifthem"
+ ehren_saelianism_nifthem_end_sigilianists: "Sigilianists Victorious in Niftland"
  desc_ehren_saelianism_nifthem_end_sigilianists: "Because of that we are more tolerant to Sigilians"
  
- td_ehren_saelianism.6.t: "Moderates Successful in Nifthem"
+ td_ehren_saelianism.6.t: "Moderates Successful in Niftland"
  td_ehren_saelianism.6.desc: "Our actions in this incident allowed us to keep balance between Siglianists and Ehrenists. Our main doctrine has remained unchanged."
  td_ehren_saelianism.6.a: "Good"
- ehren_saelianism_nifthem_end_moderates: "Moderates Victorious in Nifthem"
+ ehren_saelianism_nifthem_end_moderates: "Moderates Victorious in Niftland"
  desc_ehren_saelianism_nifthem_end_moderates: "Because of that we are more united"
 
- td_ehren_saelianism.7.t: "Ehrenists Successful in Nifthem"
+ td_ehren_saelianism.7.t: "Ehrenists Successful in Niftland"
  td_ehren_saelianism.7.desc: "Our actions in this incident made Ehrenists more powerful in our country. Because of that our main doctrine has become more Ehren slowly reintroducing old traditions to our faith."
  td_ehren_saelianism.7.a: "Good"
- ehren_saelianism_nifthem_end_ehrenists: "Ehrenists Victorious in Nifthem"
+ ehren_saelianism_nifthem_end_ehrenists: "Ehrenists Victorious in Niftland"
  desc_ehren_saelianism_nifthem_end_ehrenists: "Because of that our missionaries are devoted to converting"
  
  ## Authority
