--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -38,12 +38,12 @@
  ability_ehrenstaat_start_mechanics: "Ehren Power Struggle"
 
  consul_authority_power: "Consul Authority"
- consul_authority_power_desc: "Shows how much authority consul has in our country. After war with Nifthem this will determine what political future awaits this country."
+ consul_authority_power_desc: "Shows how much authority consul has in our country. After war with Niftland this will determine what political future awaits this country."
  consul_authority_power_gain_modifier: "Consul Authority"
  monthly_consul_authority_power: "Consul Authority"
 
  war_preparedness_power: "War Preparedness"
- war_preparedness_power_desc: "Shows how ready is our country to continue our conquest of Nifthem. We will be able to attack Nifthem before we achieve full readiness but our troops will be weaker."
+ war_preparedness_power_desc: "Shows how ready is our country to continue our conquest of Niftland. We will be able to attack Niftland before we achieve full readiness but our troops will be weaker."
  war_preparedness_power_gain_modifier: "War Preparedness"
  monthly_war_preparedness_power: "War Preparedness"
 
@@ -51,7 +51,7 @@
  ehrenstaat_additional_garrisons_button_desc: "We will send more soldiers to our home front so we can keep our cities safe, and politicians quiet."
 
  ehrenstaat_military_expansion_button: "Military Expansion"
- ehrenstaat_military_expansion_button_desc: "By increasing our funds to military so we can get more prepared to conquest of Nifthem."
+ ehrenstaat_military_expansion_button_desc: "By increasing our funds to military so we can get more prepared to conquest of Niftland."
 
  ehrenstaat_strengthen_republicanism_button: "Strengthen Republicanism"
  ehrenstaat_strengthen_republicanism_button_desc: "Opposition got suspicious about our centralisation efforts and are accusing us of authoritarism. By giving a public speech we can reassure them that our intentions are pure."
@@ -59,20 +59,20 @@
  ## Decisions
 
  ehrenstaat_take_control_over_army_title: "Subordinate our Army"
- ehrenstaat_take_control_over_army_desc: "Our army will go under consuls control so he can reform it and prepare for our future campaign against Nifthem."
+ ehrenstaat_take_control_over_army_desc: "Our army will go under consuls control so he can reform it and prepare for our future campaign against Niftland."
 
  ehrenstaat_take_control_over_navy_title: "Enforce Loyalty in the Navy"
- ehrenstaat_take_control_over_navy_desc: "Our navy will go under consuls control so he can reform it and prepare for our future campaign against Nifthem."
+ ehrenstaat_take_control_over_navy_desc: "Our navy will go under consuls control so he can reform it and prepare for our future campaign against Niftland."
 
  ehrenstaat_take_control_over_administration_title: "Take Control Over the Administration"
- ehrenstaat_take_control_over_administration_desc: "Giving administration to Consul will allow us to better administer our vassals. It will also allow us to expand our control over Nifthemian dependencies"
- EHR_nifthem_vassalisation: "We will be able to change Endoobdorf and Bloemrijkland into regular vassals."
+ ehrenstaat_take_control_over_administration_desc: "Giving administration to Consul will allow us to better administer our vassals. It will also allow us to expand our control over Niftlandian dependencies"
+ EHR_nifthem_vassalisation: "We will be able to change Levolhe and Hoofgen into regular vassals."
 
- ehrenstaat_vassalize_endoobdorf_title: "Bring Endoobdorf Closer to Us"
- ehrenstaat_vassalize_endoobdorf_desc: "Endoobdorf is bordering our main rival for Nifthemian domination - Randwerpen. We should integrate them to our administration so our war path to them is clear."
+ ehrenstaat_vassalize_endoobdorf_title: "Bring Levolhe Closer to Us"
+ ehrenstaat_vassalize_endoobdorf_desc: "Levolhe is bordering our main rival for Niftlandian domination - Regland. We should integrate them to our administration so our war path to them is clear."
 
- ehrenstaat_vassalize_bloemrijkland_title: "Reign Over Bloemrijkland"
- ehrenstaat_vassalize_bloemrijkland_desc: "We can't no longer trust Bloemrijkland to decide for themselves. Their aspiration to become one of the imperial princes are dangerous to our plans."
+ ehrenstaat_vassalize_bloemrijkland_title: "Reign Over Hoofgen"
+ ehrenstaat_vassalize_bloemrijkland_desc: "We can't no longer trust Hoofgen to decide for themselves. Their aspiration to become one of the imperial princes are dangerous to our plans."
 
  EHR_authority_centralisation_tt: "Didn't take control over something for 2 years."
 
@@ -83,25 +83,25 @@
  EHR_control_over_administration: "Administration Controlled"
  desc_EHR_control_over_administration: "We hold absolute power over our administration."
 
- ehrenstaat_declare_war_for_nifthem_title: "Declare War For Nifthem"
+ ehrenstaat_declare_war_for_nifthem_title: "Declare War For Niftland"
  ehrenstaat_declare_war_for_nifthem_desc: "We can do it now but we won't be fully prepared for it resulting in worse performance of our troops."
 
  ## Events
 
  td_ehrenstaat.1.t: "Storm on the Horizon"
- td_ehrenstaat.1.desc: "Ehrenstaat previously was a confederation of different citystates that controlled trade on entire northern side of Mysentrian continent. With slow centralisation of Ehren cities into one state and its trade sphere expansion nobody thought that this reality would shatter. But with rapid creation of trade leagues in Saelian Empire, Ehren profits started to disappear and its nation to crumble.\n\nCivil war that was caused by nobility allowed everyone to partition Ehren trade holdings outside of its sphere. They wanted to abolish merchant rule over the republic and create their own state. When nobles were crushed by merchant forces Ehrenstaat still couldn't maintain any power over other nations.\n\nIt all comes to newest rule of Grand Consul Diedrich Schumacher that was supported by old noble communities and expansionist politicians. He decided that conquest of Nifthem will allow this nation to rebuild old glory of this nation. But some people started to question his methods when he started to centralise entire power in his hands.\n\nWe will see where it all goes."
+ td_ehrenstaat.1.desc: "Ehrenstaat previously was a confederation of different citystates that controlled trade on entire northern side of Mysentrian continent. With slow centralisation of Ehren cities into one state and its trade sphere expansion nobody thought that this reality would shatter. But with rapid creation of trade leagues in Saelian Empire, Ehren profits started to disappear and its nation to crumble.\n\nCivil war that was caused by nobility allowed everyone to partition Ehren trade holdings outside of its sphere. They wanted to abolish merchant rule over the republic and create their own state. When nobles were crushed by merchant forces Ehrenstaat still couldn't maintain any power over other nations.\n\nIt all comes to newest rule of Grand Consul Diedrich Schumacher that was supported by old noble communities and expansionist politicians. He decided that conquest of Niftland will allow this nation to rebuild old glory of this nation. But some people started to question his methods when he started to centralise entire power in his hands.\n\nWe will see where it all goes."
  td_ehrenstaat.1.a: "God Save Ehrenstaat"
 
- td_ehrenstaat.2.t: "War for Nifthem"
- td_ehrenstaat.2.desc: "After our long preparations to conquer Nifthem. Many people believe that this is our chance to rebuild our nation. We can't let them down!"
+ td_ehrenstaat.2.t: "War for Niftland"
+ td_ehrenstaat.2.desc: "After our long preparations to conquer Niftland. Many people believe that this is our chance to rebuild our nation. We can't let them down!"
  td_ehrenstaat.2.a: "To War!"
 
- td_ehrenstaat.3.t: "War for Nifthem"
- td_ehrenstaat.3.desc: "Before we could prepare for our war against Nifthem, Randwerpen decided to attack us. It might be a hard fight but we need to win now. With or without needed supplies."
+ td_ehrenstaat.3.t: "War for Niftland"
+ td_ehrenstaat.3.desc: "Before we could prepare for our war against Niftland, Regland decided to attack us. It might be a hard fight but we need to win now. With or without needed supplies."
  td_ehrenstaat.3.a: "For Ehrenstaat!"
 
- td_ehrenstaat.4.t: "Fate of Randwerpen"
- td_ehrenstaat.4.desc: "We won against Randwerpen in this war. Now we should decided what to do with them. We could vassalize them, but some radical elements in our country want us to annex their entire nation to show them a lesson. It will anger our Nifthemian subjects, we can still vassalize them but take one of their most important cities and integrate it into our nation."
+ td_ehrenstaat.4.t: "Fate of Regland"
+ td_ehrenstaat.4.desc: "We won against Regland in this war. Now we should decided what to do with them. We could vassalize them, but some radical elements in our country want us to annex their entire nation to show them a lesson. It will anger our Niftlandian subjects, we can still vassalize them but take one of their most important cities and integrate it into our nation."
  td_ehrenstaat.4.a: "Vassal them"
  td_ehrenstaat.4.b: "Take City"
  td_ehrenstaat.4.c: "Fully annex"
@@ -109,41 +109,41 @@
 
  EHR_prepared_for_war: "Prepared for War"
  td_ehrenstaat.5.t: "War takes too long"
- td_ehrenstaat.5.desc: "When this war started we were hoping for fast victory so we can continue our normal operations. But now our entire economy is in shambles, military lacks reinforcements and population is exhausted. We can try to admit our defeat and give our Nifthemian lands but for favourable trade deals for us so we can recover from this crisis. We can also continue this war but we would need to reorganise our army."
+ td_ehrenstaat.5.desc: "When this war started we were hoping for fast victory so we can continue our normal operations. But now our entire economy is in shambles, military lacks reinforcements and population is exhausted. We can try to admit our defeat and give our Niftlandian lands but for favourable trade deals for us so we can recover from this crisis. We can also continue this war but we would need to reorganise our army."
  td_ehrenstaat.5.a: "Send the proposition"
  td_ehrenstaat.5.b: "Carry on"
 
- EHR_randwerpen_proposition: "We will send Randwerpen a peace offer where they get all of our lands and subjects in Nifthem, if they accept we will receive a trade boost in their trade node and 100 ducats."
+ EHR_randwerpen_proposition: "We will send Regland a peace offer where they get all of our lands and subjects in Niftland, if they accept we will receive a trade boost in their trade node and 100 ducats."
  EHR_war_effort_reorganisation: "War Effort Reorganisation"
 
  td_ehrenstaat.6.t: "Proposition Accepted"
- td_ehrenstaat.6.desc: "Randwerpen decided that our peace offer is acceptable. Now we can focus on our nation."
+ td_ehrenstaat.6.desc: "Regland decided that our peace offer is acceptable. Now we can focus on our nation."
  td_ehrenstaat.6.a: "Finally, Peace"
  EHR_trade_in_randwerpen: "Ehren Trade Deals"
 
  td_ehrenstaat.7.t: "Proposition Declined"
- td_ehrenstaat.7.desc: "Randwerpen decided to decline our trade offer. It made our nation more mobilised to continue this war and our reorganisation efforts will be faster."
+ td_ehrenstaat.7.desc: "Regland decided to decline our trade offer. It made our nation more mobilised to continue this war and our reorganisation efforts will be faster."
  td_ehrenstaat.7.a: "To Victory!"
 
  ## War
 
- cb_war_for_nifthem: "War For Nifthem"
- cb_war_for_nifthem_desc: "We will fight over domination for Nifthemi region"
- wg_war_for_nifthem: "War For Nifthem"
+ cb_war_for_nifthem: "War For Niftland"
+ cb_war_for_nifthem_desc: "We will fight over domination for Niftlandian region"
+ wg_war_for_nifthem: "War For Niftland"
  wg_war_for_nifthem_desc: "Wargoal is to show our supremacy by winning battles."
- PEACE_po_ehrenstaat_victorious: "Conquer Nifthem"
+ PEACE_po_ehrenstaat_victorious: "Conquer Niftland"
  po_ehrenstaat_victorious_desc: "We will receive an event to decide about their fate"
  PEACE_po_randwerpen_victorious: "Banish Ehrenstaat"
- po_randwerpen_victorious_desc: "We will take lands that Ehrenstaat hold directly and get an event to decide about fate of their Nifthemi puppets"
- WAR_FOR_NIFTHEM_WN: "War For Nifthem"
- po_ehrenstaat_victorious: "Conquer Nifthem"
- CB_ALLOWED_po_ehrenstaat_victorious: "Conquer Nifthem"
+ po_randwerpen_victorious_desc: "We will take lands that Ehrenstaat hold directly and get an event to decide about fate of their Niftlandian puppets"
+ WAR_FOR_NIFTHEM_WN: "War For Niftland"
+ po_ehrenstaat_victorious: "Conquer Niftland"
+ CB_ALLOWED_po_ehrenstaat_victorious: "Conquer Niftland"
  po_randwerpen_victorious: "Banish Ehrenstaat"
  CB_ALLOWED_po_randwerpen_victorious: "Banish Ehrenstaat"
 
  #### Ehren Civil War
 
- EHR_war_in_nifthem_finished_flag: "War in Nifthem Finished"
+ EHR_war_in_nifthem_finished_flag: "War in Niftland Finished"
 
  ehren_civil_war: "Ehren Civil War"
 
