--- a/localisation/TD_01_flavour_gyrdia_l_english.yml
+++ b/localisation/TD_01_flavour_gyrdia_l_english.yml
@@ -11,7 +11,7 @@
  gyrdia_laws_of_king_bletcu: "Laws of King Bletcu"
  gyrdia_laws_of_king_bletcu_desc: "Storied tell about the time when the gyrdian people were united under the legendary king Bletcu. He is said to compiled common tribal laws into a unified system, inspired by imperial codexes. Many hope for return of these great times."
  gyrdia_diplomatic_isolation: "Diplomatic Isolation"
- gyrdia_diplomatic_isolation_desc: "Relations with outsiders always have been futile. Aggresive Empire from the south and ambitious states of nifthem see gyrdia as potential expansion target. Since no one wants to help us we have to rely only on ourselves."
+ gyrdia_diplomatic_isolation_desc: "Relations with outsiders always have been futile. Aggresive Empire from the south and ambitious states of niftland see gyrdia as potential expansion target. Since no one wants to help us we have to rely only on ourselves."
  gyrdia_hills_and_woods: "Woods and Hills"
  gyrdia_hills_and_woods_desc: "Mostly rural and undeveloped lands of gyrdia have their advantages. One of them being - really easy to hide our archers. Dreadful bands of Lamcahori have been a menace for imperial marches since the times of Saelius Itself."
  gyrdia_lake_fishing: "Lake Fishing"
@@ -26,9 +26,9 @@
  gyrdian_ideas_bonus: "Gyrdian Ambition"
  gyrdian_ideas_start: "Gyrdian Traditions"
  gyrdia_shipbuilding: "Gyrdian Shipbuilding"
- gyrdia_shipbuilding_desc: "The abundance of high quality limber and large mercantile potential in the region both were the factors of our people's skill in shipmaking. Our ships are mostly adapted to be used in the deep waters and for long voyages to Nifthem, Ehrenia and Dorchean Isles."
+ gyrdia_shipbuilding_desc: "The abundance of high quality limber and large mercantile potential in the region both were the factors of our people's skill in shipmaking. Our ships are mostly adapted to be used in the deep waters and for long voyages to Niftland, Ehrenia and Dorchean Isles."
  gyrdia_on_our_own: "On Our Own"
- gyrdia_on_our_own_desc: "For a large part of our long history we have been under the influence of a foreign power. Silvestrian tribes often vassalized our ancestors, Nifthemians were slowly pushing us west and we heavily embraced the imperial customs and religions. Despite all of this, we still maintain a strong sense of identity which will guide our nation forward."
+ gyrdia_on_our_own_desc: "For a large part of our long history we have been under the influence of a foreign power. Silvestrian tribes often vassalized our ancestors, Niftlandians were slowly pushing us west and we heavily embraced the imperial customs and religions. Despite all of this, we still maintain a strong sense of identity which will guide our nation forward."
  gyrdia_codex_maiorum: "Codex Maiorum"
  gyrdia_codex_maiorum_desc: "Most common laws in our nation, often known collectively as 'Codex Maiorum', was preserved from the ancient times thanks to the effort of court judges. They often were one of the more prestigious positions in the nation and were often rightfully seen as preservers of our ancestral tradition."
  gyrdia_grand_fisheries: "Grand Fisheries"
@@ -48,7 +48,7 @@
  nordmark_naval_competition: "Naval Competition"
  nordmark_naval_competition_desc: "Due to the many great powers fighting for power in the north in the naval arms race, we also had to develop and construct our oceanic fleet to be able to compete against these countries with much longer naval tradition than us."
  nordmark_modern_border_control: "Modern Border Control"
- nordmark_modern_border_control_desc: "Historically, people used Gyrdia as a way to bypass high imperial tolls to nifthem. We can largely benefit from this thanks to the implementation of modern network of fortifications. Border with nifthem and the empire is well guarded in order to ensure that no enemy manages to infiltrate our nation or avoids taxation."
+ nordmark_modern_border_control_desc: "Historically, people used Gyrdia as a way to bypass high imperial tolls to niftland. We can largely benefit from this thanks to the implementation of modern network of fortifications. Border with niftland and the empire is well guarded in order to ensure that no enemy manages to infiltrate our nation or avoids taxation."
  nordmark_harsh_drill: "Harsh Drill"
  nordmark_harsh_drill_desc: "The foundation of XVIII century military lies in extreme discipline which is able to withstand not only cavalry charge, but also artillery barrage. By training our men in the harshest ways, we make sure that whatever hell they experience in the battlefield is merely a fraction of pain of the training."
  nordmark_swamp_draining: "Swamp Draining"
