--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -7,36 +7,36 @@
  merchant_principality_reform: "Merchant Principality"
  merchant_principality_reform_desc: "Our government functions in some parts like merchant republic and in some parts like monarchy."
 
- #### Randwerpen
+ #### Regland
 
- ### randwerpen start
+ ### Regland start
 
  ## Events
 
- randwerpen.1.t: "Randwerpen and Ehrenstaat"
- randwerpen.1.desc: "Ehren ambition to become sole economic hegemon on the north required for them to have huge industrial base that was lacking on Ehren islands. Thats when first ideas to integrate Nifthem and Tummland emerged, with first being more favourable to the leadership. From this time Ehrenstaat started to tighten their grip in their sphere of influence with mass vassalization and forceful integration of cities into Ehren administration in first half of XV ceuntry.\nThis rapid Ehren expansion didn't go unnoticed as Saelian Empire started to support idea of integration of Bloemrijkland into the Empire and Randwerpen deciding to unify entire region to stop Ehren agression. Alerted leadership of Randwerpen started mass militarisation and consolidation of the realm to protect against the future invasion."
+ randwerpen.1.t: "Regland and Ehrenstaat"
+ randwerpen.1.desc: "Ehren ambition to become sole economic hegemon on the north required for them to have huge industrial base that was lacking on Ehren islands. Thats when first ideas to integrate Niftland and Tummland emerged, with first being more favourable to the leadership. From this time Ehrenstaat started to tighten their grip in their sphere of influence with mass vassalization and forceful integration of cities into Ehren administration in first half of XV ceuntry.\nThis rapid Ehren expansion didn't go unnoticed as Saelian Empire started to support idea of integration of Hoofgen into the Empire and Regland deciding to unify entire region to stop Ehren agression. Alerted leadership of Regland started mass militarisation and consolidation of the realm to protect against the future invasion."
  randwerpen.1.a: "Inferno is coming."
- randwerpian_deterrence: "Randwerpian Deterrence"
+ randwerpian_deterrence: "Reglandian Deterrence"
 
  randwerpen.2.t: "Nobles displeased"
- randwerpen.2.desc: "The elites are worried with our recent territorial gains due to the original plan being to use our military funding to protect the state and people of Nifthem from Ehreni threats. It is now apparent that the rulership used threat of foreign invasion as a way to increase their power. Many nobles and burghers now refuse to fight in any future wars."
+ randwerpen.2.desc: "The elites are worried with our recent territorial gains due to the original plan being to use our military funding to protect the state and people of Niftland from Ehreni threats. It is now apparent that the rulership used threat of foreign invasion as a way to increase their power. Many nobles and burghers now refuse to fight in any future wars."
  randwerpen.2.a: "It's not what you think!"
  randwerpen_misguided_wrath: "Misguided Wrath"
 
- randwerpen.3.t: "War for Nifthem"
- randwerpen.3.desc: "Our chance to liberate nifthem from our occupiers has arose, we will battle with ehren menace to finally push them from our lands."
+ randwerpen.3.t: "War for Niftland"
+ randwerpen.3.desc: "Our chance to liberate Niftland from our occupiers has arose, we will battle with ehren menace to finally push them from our lands."
  randwerpen.3.a: "To war!"
 
- randwerpen.4.t: "War for Nifthem"
+ randwerpen.4.t: "War for Niftland"
  randwerpen.4.desc: "Perfidious Ehrens attacked our nation to consolidate their control over these lands. We won't allow it to happen!"
  randwerpen.4.a: "To war!"
 
- randwerpen.5.t: "Fate of Nifthem"
- randwerpen.5.desc: "We won against Ehrenstaat and because of it we took lands that they occupied, but now the question of their puppet states arise. We recieved control over them from Ehrenstaat, keeping them would allow us to finally unite entirety of Nifthem under one nation. But these states don't want to recognise our rule and keeping them under our rule could be disastrous. Should we keep them or allow them to decide their own fate."
+ randwerpen.5.t: "Fate of Niftland"
+ randwerpen.5.desc: "We won against Ehrenstaat and because of it we took lands that they occupied, but now the question of their puppet states arise. We recieved control over them from Ehrenstaat, keeping them would allow us to finally unite entirety of Niftland under one nation. But these states don't want to recognise our rule and keeping them under our rule could be disastrous. Should we keep them or allow them to decide their own fate."
  randwerpen.5.a: "Enforce our rule"
  randwerpen.5.b: "Let them free"
- NAR_nifthem_new_management_tt: "All Ehren subjects in Nifthem will become our vassals"
- NAR_nifthem_freedom_tt: "All Ehren subjects in Nifthem will become free"
+ NAR_nifthem_new_management_tt: "All Ehren subjects in Niftland will become our vassals"
+ NAR_nifthem_freedom_tt: "All Ehren subjects in Niftland will become free"
  EHR_trading_point: "Ehren Trading Point"
 
  randwerpen.6.t: "Peace Proposition"
@@ -51,31 +51,31 @@
  randwerpen_conquer_oodnach_title: "Conquer Oodnach"
  randwerpen_conquer_oodnach_desc: "TODO"
 
- randwerpen_conquer_lesser_nifthem_title: "Conquer Lesser Nifthem"
+ randwerpen_conquer_lesser_nifthem_title: "Conquer Onjburg"
  randwerpen_conquer_lesser_nifthem_desc: "TODO"
 
  randwerpen_conquer_lachel_title: "Conquer Lachel"
  randwerpen_conquer_lachel_desc: "TODO"
  RAN_gyrdian_levies: "Gyrdian Levies"
 
- randwerpen_declare_war_for_nifthem_title: "Start War for Nifthem"
- randwerpen_declare_war_for_nifthem_desc: "We are ready to strike Ehrenstaat and push them from Nifthem."
- NAR_conquered_nifthem_minors: "Lesser Nifthem and Oodnach were conquered"
- NAR_preparations_finished: "Lost modifier Randwerpian Deterence without getting Misguided Wrath"
+ randwerpen_declare_war_for_nifthem_title: "Start War for Niftland"
+ randwerpen_declare_war_for_nifthem_desc: "We are ready to strike Ehrenstaat and push them from Niftland."
+ NAR_conquered_nifthem_minors: "Onjburg and Oodnach were conquered"
+ NAR_preparations_finished: "Lost modifier Reglandian Deterence without getting Misguided Wrath"
 
 #### ideas
 
 ## group
 
- minor_nifthemi_ideas: "Nifthemi Minor Ideas"
- minor_nifthemi_ideas_start: "Nifthemi Minor Traditions"
- minor_nifthemi_ideas_bonus: "Nifthemi Minor Ambition"
+ minor_nifthemi_ideas: "Niftlandian Minor Ideas"
+ minor_nifthemi_ideas_start: "Niftlandian Minor Traditions"
+ minor_nifthemi_ideas_bonus: "Niftlandian Minor Ambition"
 
  minor_nifthemi_war_is_business: "War is Business"
  minor_nifthemi_war_is_business_desc: "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
 
  minor_nifthemi_beyond_mysentria: "Beyond Mysentria"
- minor_nifthemi_beyond_mysentria_desc: "Nifthemi fleets will explore beyond Mysentria so we can find new civilizations to trade with."
+ minor_nifthemi_beyond_mysentria_desc: "Niftlandian fleets will explore beyond Mysentria so we can find new civilizations to trade with."
  
  minor_nifthemi_colonial_spirit: "Colonial Spirit"
  minor_nifthemi_colonial_spirit_desc: "We found new lands that are empty and free to claim! Our population now wants to continue our exploration and start colonisation of these lands."
@@ -83,7 +83,7 @@
  minor_nifthemi_rapid_urbanisation: "Rapid Urbanisation"
  minor_nifthemi_rapid_urbanisation_desc: "These lands are very fertile and full of resources that can allow us to expand our cities."
 
- minor_nifthemi_bank_of_nifthem: "Bank of Nifthem"
+ minor_nifthemi_bank_of_nifthem: "Bank of Niftland"
  minor_nifthemi_bank_of_nifthem_desc: "Who controls banking controls economy, and our banks and bankiers are one of the most famous and trusted on the continent, maybe even entire world."
 
  minor_nifthemi_sea_trade: "Sea Trade"
@@ -92,26 +92,26 @@
  minor_nifthemi_global_economy: "Global Economy"
  minor_nifthemi_global_economy_desc: "Our territory is one of the most important trade centers on the world. It means that any change that happens here also affects other countries economies."
  
-## united nifthem
+## united NiftlandS
 
- united_nifthemi_ideas_start: "Nifthemi Traditions"
- united_nifthemi_ideas: "Nifthemi Ideas"
- united_nifthemi_ideas_bonus: "Nifthemi Ambitions"
+ united_nifthemi_ideas_start: "Niftlandian Traditions"
+ united_nifthemi_ideas: "Niftlandian Ideas"
+ united_nifthemi_ideas_bonus: "Niftlandian Ambitions"
 
  united_nifthemi_national_unity: "National Unity"
  united_nifthemi_national_unity_desc: "Our population gone through a lot making it more united than ever."
 
  united_nifthemi_against_ehren_imperialism: "Against Ehren Imperialism"
- united_nifthemi_against_ehren_imperialism_desc: "Ehren imperialists tried to conquer and exploit our territory for their own gain! We, people of Nifthem are now united and ready to prevent this thing from happening."
+ united_nifthemi_against_ehren_imperialism_desc: "Ehren imperialists tried to conquer and exploit our territory for their own gain! We, people of NiftlandS are now united and ready to prevent this thing from happening."
 
  united_nifthemi_colonial_empire: "Colonial Empire"
- united_nifthemi_colonial_empire_desc: "One of the most important aspects of modern Nifthemi culture is the desire to explore new lands. Because of that we can mobilise a lot of men to expand our empire beyond the seas."
+ united_nifthemi_colonial_empire_desc: "One of the most important aspects of modern Niftlandian culture is the desire to explore new lands. Because of that we can mobilise a lot of men to expand our empire beyond the seas."
 
  united_nifthemi_citizen_guard: "Citizen Guard"
  united_nifthemi_citizen_guard_desc: "We don't need a professional army, citizens will defend our lands by their own!"
 
  united_nifthemi_global_trade: "Global Trade"
- united_nifthemi_global_trade_desc: "Everything valuable will go through Nifthemi borders, with a fee of course."
+ united_nifthemi_global_trade_desc: "Everything valuable will go through Niftlandianian borders, with a fee of course."
 
  united_nifthemi_modern_state: "Modern State"
  united_nifthemi_modern_state_desc: "Government must be constantly reformed and maintained for it to be useful to all citizens."
