--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -68,8 +68,8 @@
  td_silberhafen.7.desc: "Because of our small population we can't push out or oppress other cultures. We also don't support those actions because that would be against values that our republic stands for. We need to start accepting Argenian people as normal citizens like Ehren people. Only then we can function like normal society."
  td_silberhafen.7.a: "Our republic grows"
 
- td_silberhafen.8.t: "Exodus of Nifthemians"
- td_silberhafen.8.desc: "Due to Ehren conquest of Nifthem, a lot of refugees began to emigrate into our lands. After some time a big community of Nifthemian citizens started to advocate for an idea of their own city, similar in governance to Silberhafen. This city, which is called Zilverpoort, can only happen if our administration helps them establish it. We can help them achieve their goal, but we can just relocate them to already existing Ehren city."
+ td_silberhafen.8.t: "Exodus of Niftlandians"
+ td_silberhafen.8.desc: "Due to Ehren conquest of Niftland, a lot of refugees began to emigrate into our lands. After some time a big community of Niftlandian citizens started to advocate for an idea of their own city, similar in governance to Silberhafen. This city, which is called Zilverpoort, can only happen if our administration helps them establish it. We can help them achieve their goal, but we can just relocate them to already existing Ehren city."
  td_silberhafen.8.a: "Let them establish their haven."
  td_silberhafen.8.b: "Send them to Silberhafen"
  
