--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -78,7 +78,7 @@
  upper_magreiner_law_reforms: "Law Reforms"
  upper_magreiner_law_reforms_desc: "Closeness to the true imperial domain made this region in much more direct control than the other parts of the empire, keeping the law and order intact. "
  magreiner_trade: "Magreiner Trade"
- magreiner_trade_desc: "Great river of Magreina starts in the high Cacumuds, flows through Adrianburg, Limstadt, Hegenstadt, Magkirche, Magstadt and Kaphenden to finally reach its end in the Bay of Nifthem up north, carrying many important goods and ideas."
+ magreiner_trade_desc: "Great river of Magreina starts in the high Cacumuds, flows through Adrianburg, Limstadt, Hegenstadt, Magkirche, Magstadt and Kaphenden to finally reach its end in the Bay of Niftland up north, carrying many important goods and ideas."
  upper_magreiner_legacy_of_imperial_civil_war: "Legacy of the Lippstadt League"
  upper_magreiner_legacy_of_imperial_civil_war_desc: "Brutal but quick war of the Lippstadt League brought not only changes to the imperial power structure, but showed the first signs of the new age weaponry - Alwin von Verun became famous for using wagon warfare which was easily defendable in open terrain typical to the magreiner farmlands."
  magreiner_imperial_ties: "Imperial Ties"
@@ -182,7 +182,7 @@
  salia_castles_of_nine_emperors: "Castles of Nine Emperors"
  salia_castles_of_nine_emperors_desc: "Salia is also known as the land of the emperors, due to the fact that the vast majority of Silvestrine emperors came from these regions. Remnants of their once great fortifications still scatter the land and remind us of our past."
  salia_salt_industry: "Salt Industry"
- salia_salt_industry_desc: "Salt is essential to food conservation. Most of the salt on the continent comes from the seawater, but mining it provides a much better yield. Salish and Bohemian salt mines supply not only the empire, but also Camaria and Nifthem."
+ salia_salt_industry_desc: "Salt is essential to food conservation. Most of the salt on the continent comes from the seawater, but mining it provides a much better yield. Salish and Bohemian salt mines supply not only the empire, but also Camaria and Niftland."
  salia_waldrodung: "Waldrodung"
  salia_waldrodung_desc: "When Saelius conquered these lands they were covered in a dense and almost untraversable forests. The process of deforestation started with the arrival of Saelian colonists and continues to this day."
  salia_embrace_the_nordmarker_model: "Embrace the Nordmarker Model"
