--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -10,7 +10,7 @@
  bogiland_nation_desc: "Restore Bogiland DESC"
 
  nifthem_nation_title: "Unite People of Nifthem @NIF" 
- nifthem_nation_desc: "Nifthem DESC"
+ nifthem_nation_desc: "Niftland DESC"
 
  argenia_nation_title: "Reunite Argenia @ARG"
  argenia_nation_desc: "Kingdom of Argenia is one of the oldest states in the dorchean isles being established shortly after silvestric arrival in the island Wyrmwellend thanks to the efforts of legendary Wymond."
