--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -47,13 +47,13 @@
  maenabeg_area: "Maenabeg"
  dideyn_area: "Dideyn"
  bodaeyw_area: "Bodaeyw"
- randwerpen_area: "Randwerpen"
- lesser_nifthem_area: "Lesser Nifthem"
- upper_nifthem_area: "Upper Nifthem"
+ randwerpen_area: "Rotsheuvel"
+ lesser_nifthem_area: "Laagnift"
+ upper_nifthem_area: "Hoognift"
  magreinmond_area: "Magreinmond"
- ehrenschap_area: "Ehrenschap"
- west_nifthem_area: "East Nifthem"
- endoobdorf_area: "Endoobdorf"
+ ehrenschap_area: "Nevelgrot"
+ west_nifthem_area: "Zijdewoud"
+ endoobdorf_area: "Loofveld"
  wydian_tip_area: "Wydian Tip"
  wessburg_area: "Apfössheim"
  clarokammen_area: "Clarokammen"
@@ -255,7 +255,7 @@
  noordenia_area: "Noordenia"
  nordstrasse_area: "Nordstrasse"
  heniholm_area: "Heniholm"
- rudohland_area: "Rudohland"
+ rudohland_area: "Sterdeken"
  luftnebul_area: "Luftnebul"
 
  xastram_area: "Xastram"
