--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -50,7 +50,7 @@
  nortwerten: "Nortwerten"
  niftvolc: "Niftvolc"
 
- nifthemian_group: "Nifthemic"
+ nifthemian_group: "Niftlandian"
  kloerde: "Kloerde"
  achtveldi: "Achtveldi"
  weesfani: "Weesfani"
