--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -100,7 +100,7 @@
  nordmarker_sprite_pack: "Nordmarker Sprite Pack"
  magkirche_sprite_pack: "Magkirche Sprite Pack"
  nordkirche_sprite_pack: "Nordkirche Sprite Pack"
- bloemrijkland_sprite_pack: "Bloemrijkland Sprite Pack"
+ bloemrijkland_sprite_pack: "Hoofgen Sprite Pack"
  geoberic_sprite_pack: "Geoberic Sprite Pack"
  silvestria_sprite_pack: "Silvestria Sprite Pack"
  granlatz_sprite_pack: "Granlatz Sprite Pack"
