--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -56,9 +56,9 @@
  muzbahi_company: "Muzbahi Charter"
  TRADE_COMPANY_MUZBAHI_Root_Culture_GetName: "[Root.Culture.GetName] Muzbah Company"
  TRADE_COMPANY_MUZBAHI_Trade_Company: "Muzbahi Trade Company"
- nifthemi_company: "Nifthemi Charter"
- TRADE_COMPANY_NIFTHEMI_Root_Culture_GetName: "[Root.Culture.GetName] Nifthem Company"
- TRADE_COMPANY_NIFTHEMI_Trade_Company: "Nifthemi Trade Company"
+ nifthemi_company: "Niftlandian Charter"
+ TRADE_COMPANY_NIFTHEMI_Root_Culture_GetName: "[Root.Culture.GetName] Niftlandian Company"
+ TRADE_COMPANY_NIFTHEMI_Trade_Company: "Niftlandian Trade Company"
  glysian_company: "Glysian Charter"
  TRADE_COMPANY_GLYSIAN_Root_Culture_GetName: "[Root.Culture.GetName] Glysia Company"
  TRADE_COMPANY_GLYSIAN_Trade_Company: "Glysian Trade Company"
