--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -19,16 +19,16 @@
  ZAN_ADJ: "Zandigehaven"
  OOD: "Oodnach"
  OOD_ADJ: "Oodnacher"
- EHS: "Ehrenschap"
- EHS_ADJ: "Ehrenshapper"
- RAN: "Randwerpen"
- RAN_ADJ: "Randwerpenian"
- BLO: "Bloemrijkland"
- BLO_ADJ: "Bloemrijklander"
- END: "Endoobdorf"
- END_ADJ: "Endoobdorfer"
- LES: "Lesser Nifthem"
- LES_ADJ: "Lesser Nifthemer"
+ EHS: "Hezeiland"
+ EHS_ADJ: "Hezeiland"
+ RAN: "Regland"
+ RAN_ADJ: "Reglandian"
+ BLO: "Hoofgen"
+ BLO_ADJ: "Hoofgener"
+ END: "Levolhe"
+ END_ADJ: "Levolher"
+ LES: "Onjburg"
+ LES_ADJ: "Onjburger"
 
  TML: "Tummland"
  TML_ADJ: "Tummic"
@@ -446,8 +446,8 @@
 
  ARG: "Argenia"
  ARG_ADJ: "Argenian"
- NIF: "Nifthem"
- NIF_ADJ: "Nifthemian"
+ NIF: "Niftland"
+ NIF_ADJ: "Niftlandian"
 
  SEF: "Sefert"
  SEF_ADJ: "Sefertian"
