--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -15,7 +15,7 @@
  PROV_ADJ14: "Derheim"
  PROV_ADJ15: "Lahwell"
  PROV_ADJ16: "Newmenz"
- PROV_ADJ17: "Bay of Nifthem"
+ PROV_ADJ17: "Bay of Niftland"
  PROV_ADJ18: "Zeschburg"
  PROV_ADJ19: "Ziemelian Bay"
  PROV_ADJ20: "Lerhue"
