--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -15,7 +15,7 @@
  PROV14: "Derheim"
  PROV15: "Lahwell"
  PROV16: "Newmenz"
- PROV17: "Bay of Nifthem"
+ PROV17: "Bay of Niftland"
  PROV18: "Zeschburg"
  PROV19: "Ziemelian Bay"
  PROV20: "Lerhue"
