--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -56,7 +56,7 @@
  mudnan_kudsavah_reform: "Mudnan Kudsavah"
  mudnan_kudsavah_reform_desc: "Society of Mudnan Kudsavah, meaning holy state, is ruled by ilumist clergy who govern over their pious population."
 
- randwerpen_kingdom_reform: "Randwerpen Kingdom"
+ randwerpen_kingdom_reform: "Regland Kingdom"
  randwerpen_kingdom_reform_desc: "We are providing our people freedom by having a parliament and guaranteed rights which in return makes people more willing to fight for our freedom. They build different fortifications and structures that in case of foreign invasion would help us to push invaders back and make it as hurtful as it is possible for them. These structures could even outlive our state making foreign occupation very difficult."
 
  bogilish_monarchy_reform: "Bogilish Monarchy"
